/*
 * $Id: ChangeLog,v 1.1253 2003/07/15 20:09:47 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2003-07-16 04:50 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * source/rtl/filesys.c
     * Fixed compilation error when X__WIN32__ is defined

2003-07-16 03:00 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * source/rdd/dbfntx/dbfntx1.c
   * source/rdd/dbfcdx/dbfcdx1.c
     * Add missing type casts

2003-07-15 09:06 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
   * source/rdd/dbfntx/dbfntx1.c
	  source/rdd/dbfcdx/dbfcdx1.c
	  ! Fixed an bug when processing filenames of index file under linux (related to the filecase of paramaters) 
	   
2003-07-15 10:20 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * include/hbset.h
     * only define HB_OS_WIN_32_USED when not defined yet.

   * source/compiler/genc.c
   * source/odbc/odbc.c
   * source/rtl/filesys.c
   * source/rtl/hbxml.c
   * source/rtl/regex.c
   * source/rtl/hbcompress.c
   * source/rtl/hbsrlraw.c
   * source/rtl/hbcrypt.c
   * source/vm/inet.c
   * source/vm/hvm.c
     * Fixed compiler warnings

2003-07-15 02:15 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/hbxml.c
  * source/vm/extend.c
    ! Fixed compilation warnings

  * tests/mtstress.prg
    ! Added WITH OBJECT TEST
    ! Tests are now 10000 for test type, for higher stress :-)

2003-07-15 01:25 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/estack.c
  * source/vm/hvm.c
  * source/vm/thread.c
  * source/vm/errorapi.c
    ! fixed initialization and termination issues of the virtual machine
      under MT. Maybe we can reproject it a little better for the future,
      but the current version is working well.

2003-07-14 18:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/achoice.prg