@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1253 2003/07/15 20:09:47 andijahja Exp $
+ * $Id: ChangeLog,v 1.1254 2003/07/15 22:01:14 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2003-07-16 08:50 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
+   * utils/hbtest/rt_array.prg
+     * Changed return value of ATail(""): NIL => "" to conform with
+       xHarbour string-as-array feature.
+
+   * source/vm/hvm.c
+     * Some modifications on hb_vmSelectWorkArea() in order to be more
+       Clipper compatible.
+
 2003-07-16 04:50 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
    * source/rtl/filesys.c
      * Fixed compilation error when X__WIN32__ is defined
